crates/reinhardt-core/crates/macros/tests/ui/path/fail/reinhardt_style_outside_braces.rs
// Test: Django-style parameters outside braces should fail

use reinhardt_macros::path;

fn main() {
    let pattern = path!("polls/<int:id>/");
}
